; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_dat12tos16.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_dat12tos16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dat12tos16.diff = internal constant [16 x i32] [i32 0, i32 0, i32 256, i32 512, i32 768, i32 1024, i32 1280, i32 1536, i32 2560, i32 2816, i32 3072, i32 3328, i32 3584, i32 3840, i32 4096, i32 4096], align 16
@dat12tos16.shift = internal constant [16 x i32] [i32 0, i32 0, i32 1, i32 2, i32 3, i32 4, i32 5, i32 6, i32 6, i32 5, i32 4, i32 3, i32 2, i32 1, i32 0, i32 0], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @dat12tos16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dat12tos16(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 4096
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = ashr i32 %8, 8
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds [16 x i32], [16 x i32]* @dat12tos16.diff, i64 0, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = sub nsw i32 %10, %14
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [16 x i32], [16 x i32]* @dat12tos16.shift, i64 0, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = shl i32 %15, %19
  ret i32 %20
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
